Minor fix in the space overview

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -59,8 +59,8 @@
                             {% if get_place.description %}
                                 <p><strong>{% trans "Description:" %}</strong> {{ get_place.description|removetags:'p'|safe }}</p>
                             {% endif %}
-                            <p><strong>{% trans "Current status:" %}</strong> Ejemplo</p>
-                            <p><strong>{% trans "Users:" %}</strong> 13411</p>
+                            <p><strong>{% trans "Current status:" %}</strong> Not implemented</p>
+                            <p><strong>{% trans "Participants:" %}</strong> Not implemented</p>
                             <hr />
                             <h4>{% trans "Recent activity" %}</h4>
                             
