Fix Issue 171: Can not delete user account.

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/delete_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/delete_done.html
@@ -11,7 +11,7 @@
             
             <p>{% trans "Your profile information has been removed successfully." %}</p>
             <a href="/">&laquo; {% trans "Back to home page" %}</a></br>
-            <a href="{% url 'profile-overview' %}">&laquo; {% trans "Back to your profile" %}</a>
+            <a href="{% url 'profile_overview' %}">&laquo; {% trans "Back to your profile" %}</a>
         </div>
     </div>
 
