Changed redirection after posted comment. It could be fix for #142.

--- a/src/e_cidadania/templates/comments/posted.html
+++ b/src/e_cidadania/templates/comments/posted.html
@@ -5,7 +5,11 @@
 
 {% block content %}
     <h1>{% trans "Thank you for your comment" %}.</h1>
-
     <hr />
-    <a href="{% url 'site-index' %}" class="btn small">&laquo; {% trans "Go back" %}</a>
+    {% if request.META.HTTP_REFERER %}
+        <a href="{{ request.META.HTTP_REFERER }}" class="btn small">&laquo; {% trans "Go back" %}</a>
+    {% else %}
+        <a href="{% url 'site-index' %}" class="btn_small">&laquo; {% trans "Go back" %}</a>
+    {% endif %}
+
 {% endblock %}
