fix document url ticket #170

--- a/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
@@ -16,7 +16,7 @@
             <h3>{% trans "Document list" %}</h3>
             
             {% for doc in document_list %}
-                <p><a href="{{ MEDIA_URL}}{{ doc.docfile.url }}"><strong>{{ doc.title }}</strong></a> <em>{% trans "published" %} {{ doc.pub_date }}</em></p>
+                <p><a href="{{ doc.docfile.url }}"><strong>{{ doc.title }}</strong></a> <em>{% trans "published" %} {{ doc.pub_date }}</em></p>
             {% empty %}
                 <p>{% trans "There are no documents in this space" %}.</p>
             {% endfor %}
