--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -266,7 +266,7 @@
                         <div class="span8">
                             <ul class="unstyled">
                                 {% for doc in documents %}
-                                    <li><a href="{{ MEDIA_URL }}{{ doc.docfile.url }}">{{ doc.title }} ({{ doc.get_file_ext }}, {{ doc.get_file_size }})</a></li>
+                                    <li><a href="{{ doc.docfile.url }}">{{ doc.title }} ({{ doc.get_file_ext }}, {{ doc.get_file_size }})</a></li>
                                 {% empty %}
                                     <li>{% trans "No documents available." %}</li>
                                 {% endfor %}
