fix #162, should meet requirements now, flags have been embedded in a dropdown list

--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -95,6 +95,15 @@ footer {
 .introtitle {
     font-size: 3em;
 }
+
+.languageform {
+    margin:0px;
+}
+
+.languageform img {
+    float:left; 
+    padding-right:15px;
+}
 /* END MAIN INDEX */
 
 /* SPACE INDEX */
