I want to participate button
When a user tries to access a space that is private, sees a button "I want to participate" that when clicked, sends an email to the administrator
that contains a link for the administrator to click and approve the user to use the space.

--- a/src/e_cidadania/templates/not_allowed.html
+++ b/src/e_cidadania/templates/not_allowed.html
@@ -8,6 +8,10 @@
     <div class="row">
         <div class="span12">
             <h4>{% trans "You are not allowed to access here." %}</h4>
+            {% if not user.is_anonymous %}
+            <br />
+            <a href="{{ get_place.get_absolute_url }}intent/" class="btn" >{% trans "I want to participate" %}</a>
+            {% endif %}
             <p>{% trans "You can go <a href='/'>back to home</a> or <a href='/accounts/'>back to your profile</a>" %}</p>
         </div>
     </div>
