--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -60,10 +60,10 @@
         <a href="{% url 'password_reset' %}">{% trans "Recover your password" %}</a><br />
         <a href="{% url 'signup' %}">{% trans "Sign up!" %}</a><br />
         <h4>{% trans "Invite your friends" %}</h4>
-        <a href="#">{% trans "Via e-mail" %}</a><br />
-        <a href="#">{% trans "Via Twitter" %}</a><br />
-        <a href="#">{% trans "Via Facebook" %}</a><br />
-        <a href="#">{% trans "Via Google Plus" %}</a><br />
+        <a href="{% url 'invite' %}">{% trans "Via e-mail" %}</a><br />
+        <a href="https://twitter.com/share?text=Come to e-cidadania&url={{ uri }}">{% trans "Via Twitter" %}</a><br />
+        <a href="https://www.facebook.com/sharer.php?u={{ uri }}&t=Invitation to e-cidadania">{% trans "Via Facebook" %}</a><br />
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url={{ uri }}">{% trans "Via Google Plus" %}</a><br />
     </div>
 
 </div>
