--- a/src/e_cidadania/templates/invite.html
+++ b/src/e_cidadania/templates/invite.html
@@ -14,7 +14,7 @@ application with txt files and that's efficiency.
         <div class="span12">
             <h2>{% trans "Invite your friends"%}</h2>
             <h4>Invite via social media</h4><br />
-            <a href="https://www.facebook.com/sharer.php?u={{ uri }}&t=This is a test" target="_blank"><img src="{{ STATIC_URL }}/img/facebook.png" width="50" height="50"/></a><a href="https://twitter.com/share?text=Come to e-cidadania&url={{ uri }}" target="_blank"><img src="{{ STATIC_URL }}/img/twitter.png" width="50" height="50"/></a><a href="https://plusone.google.com/_/+1/confirm?hl=en&url={{ uri }}" target="_blank"><img src="{{ STATIC_URL }}/img/googleplus.jpg" width="50" height="50"/></a><br /><br />
+            <a href="https://www.facebook.com/sharer.php?u={{ uri }}&t=Invitation to e-cidadania" target="_blank"><img src="{{ STATIC_URL }}/img/facebook.png" width="50" height="50"/></a><a href="https://twitter.com/share?text=Come to e-cidadania&url={{ uri }}" target="_blank"><img src="{{ STATIC_URL }}/img/twitter.png" width="50" height="50"/></a><a href="https://plusone.google.com/_/+1/confirm?hl=en&url={{ uri }}" target="_blank"><img src="{{ STATIC_URL }}/img/googleplus.jpg" width="50" height="50"/></a><br /><br />
 
             <form action="/invite/" method="post">{% csrf_token %}
                 <label><h4>{% trans "Invite via E-mail" %}</h4></label>
