176 bug fix | add functionality to change email
Added templates, new options menu item, new form that inherits from
EmailValidationForm..

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -47,6 +47,7 @@
                         <li><a href="{% url 'profile_public' request.user %}">{% trans 'View your public profile' %}</a></li>
                         <li><a href="{% url 'password_change' %}">{% trans 'Change your password' %}</a></li>
                         <li><a href="{% url 'password_reset' %}">{% trans 'Reset your password' %}</a></li>
+                        <li><a href="{% url 'email_change' %}">{% trans 'Change email' %}</a></li>
                         <li><a href="{% url 'email_validation_reset' %}">{% trans 'Reset email validation' %}</a></li>
                     </ul>
                 </li>
