--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -56,9 +56,11 @@
 
 
     <div class="span4 offset2">
+        {% if not user.is_authenticated %}
         <h4>{% trans "Helpful links" %}</h4>
         <a href="{% url 'password_reset' %}">{% trans "Recover your password" %}</a><br />
         <a href="{% url 'signup' %}">{% trans "Sign up!" %}</a><br />
+        {% endif %}
         <h4>{% trans "Invite your friends" %}</h4>
         <a href="{% url 'invite' %}">{% trans "Via e-mail" %}</a><br />
         <a href="https://twitter.com/share?text=Come to e-cidadania&url={{ uri }}">{% trans "Via Twitter" %}</a><br />
