--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -29,7 +29,7 @@
     	<script type="text/javascript">
     	    $(document).ready(function(){
                 $(".alert").alert();
-                $('#wysiwygtextarea').wysihtml5();
+                $('#id_description').wysihtml5();
             });
     	</script>
 
