Added id_post_message to be handled wysihtml5

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -30,6 +30,7 @@
     	    $(document).ready(function(){
                 $(".alert").alert();
                 $('#id_description').wysihtml5();
+                $('#id_post_message').wysihtml5();
             });
     	</script>
 
