--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -2,8 +2,8 @@
 <ul class="nav">
     <li class="active"><a href="/">{% trans "Home" %}</a></li>
     {% if not user.is_authenticated %}
-        <li><a href="{% url 'login' %}">{% trans "Login" %}</a></li>
-        <li><a href="{% url 'signup' %}">{% trans "Sign up" %}</a></li>
+        <li><a href="{% url 'login' %}?next={{request.path}}">{% trans "Login" %}</a></li>
+        <li><a href="{% url 'signup' %}?next={{request.path}}">{% trans "Sign up" %}</a></li>
     {% endif %}
 </ul>
 
