fixed the naming issues for the calendar, meeting -> event; changed the way onSelect for calendar handled dates, using jQuery's own getDate now to get a Date object, no more i18n problems.

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -334,10 +334,10 @@
                                 });
                                 {% endcomment %} 
 		                        $.datepicker.setDefaults(
-		                            $.datepicker.regional[ "" ],
 		                            { onSelect: function(dateText) {
-                                        var month = dateText.split("/")[0];
-                                        var year = dateText.split("/")[2];
+                                        var date = $(this).datepicker("getDate");
+                                        var month = date.getMonth() + 1;
+                                        var year = date.getFullYear();
                                         window.location = "calendar/" + year + "/" + month + "/";
                                       }
                                     }
