--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/logout.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/logout.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="span12">
         	<h3>{% trans "Logged out" %}</h3>
-        	<p class="large">{% trans "You've been logged out" %}. (<a href="{% url 'profile_overview' %}">{% trans 'Log in again' %}</a>)</p>
+        	<p class="large">{% trans "You've been logged out" %}. (<a href="{% url 'login' %}">{% trans 'Log in again' %}</a>)</p>
     
             <hr />
             <a href="{% url 'site-index' %}" class="btn small">&laquo; {% trans "Go back" %}</a>
