Moved some JS imports to bottom of base.html
This is done to have a faster loading time

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -21,16 +21,7 @@
 			google.load("jquery", "1.7.1", {uncompressed:false});
 			google.load("jqueryui", "1.8.16", {uncompressed:false});
 		</script>
-        <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
-        <script src="{{ STATIC_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
-    	<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
-    	<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
 		<script src="{{ STATIC_URL }}/js/bootstrap-wysihtml5-0.0.2.js"></script>
-    	<script type="text/javascript">
-    	    $(document).ready(function(){
-                $(".alert").alert();
-            });
-    	</script>
 
     	<!-- End load JavaScript -->
        	{% block extrajs %}
@@ -140,6 +131,17 @@
 	            {% endblock %}
 	        </div>
 	    </div>
+			<!-- Load JavaScript -->
+        <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
+        <script src="{{ STATIC_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
+				<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
+				<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
+				<script type="text/javascript">
+    	    $(document).ready(function(){
+                $(".alert").alert();
+            });
+				</script>
+    	<!-- End load JavaScript -->
 	</body>
 </html>
 
