--- a/static/styles/S3/locationselector.widget.css
+++ b/static/styles/S3/locationselector.widget.css
@@ -1,14 +1,15 @@
 .gis_coord_wrap .decimal {
-    width: 180px;
+    width: 174px;
 }
 
 .gis_coord_wrap .gis_coord_dms input {
-    width: 32px;
+    width: 37px;
 }
 
 .gis_coord_wrap .gis_coord_dms input.seconds {
-    width: 64px;
+    width: 70px;
 }
-.gis_coord_dms {
-font-weight: bold;
+
+.gis_coord_wrap div {
+    padding-top: 8px;
 }
