One format switch button for both latitude and longitude; Fixes

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -612,6 +612,9 @@ table {
     text-align: justify;
     line-height: 1.25;
 }
+#home li {
+    margin-left: 12px;
+}
 #footer {
     margin: 0 auto;
     clear: both;
