--- a/src/e_cidadania/templates/invite.html
+++ b/src/e_cidadania/templates/invite.html
@@ -15,7 +15,8 @@ application with txt files and that's efficiency.
             <h2>{% trans "Invite your friends"%}</h2>
             <h4>Invite via social media</h4><br />
             <a href="https://www.facebook.com/sharer.php?u={{ uri }}&t=Invitation to e-cidadania" target="_blank"><img src="{{ STATIC_URL }}/img/facebook.png" width="50" height="50"/></a><a href="https://twitter.com/share?text=Come to e-cidadania&url={{ uri }}" target="_blank"><img src="{{ STATIC_URL }}/img/twitter.png" width="50" height="50"/></a><a href="https://plusone.google.com/_/+1/confirm?hl=en&url={{ uri }}" target="_blank"><img src="{{ STATIC_URL }}/img/googleplus.jpg" width="50" height="50"/></a><br /><br />
-
+            
+            {% if user.is_authenticated %}
             <form action="/invite/" method="post">{% csrf_token %}
                 <label><h4>{% trans "Invite via E-mail" %}</h4></label>
                 <input name="email_addr" id="email_addr" type="text" class="span3" placeholder="{% trans 'Write the e-mail adresses here' %}">
@@ -24,6 +25,9 @@ application with txt files and that's efficiency.
                 <p class="help-block">{% trans "You can write here whatever text you want for your invitation, or leave it by default." %}</p>
                 <button type="submit" class="btn btn-large">{% trans "Submit" %}</button>
             </form>
+            {% else %}
+            <p>{% trans "To send invitations via e-mail you have to be <a href='/accounts/login/'>logged in</a>."%}
+            {% endif %}
         </div>
     </div>
 
