--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -113,9 +113,10 @@
 	                
 	        <div class="span3">
 	            <strong>{% trans "Help" %}</strong><br />
-	            <a href="http://trac.cidadania.coop/MailingLists">{% trans "Mailing lists" %}</a><br />
-	            <a href="http://dev.ecidadania.org">{% trans "Issues" %}</a><br />
-	            <a href="mailto:soporte@ecidadania.org">{% trans "E-mail" %}</a>
+	            <a href="http://code.ecidadania.org/wiki/MailingLists">{% trans "Mailing lists" %}</a><br />
+	            <a href="http://code.ecidadania.org">{% trans "Issues" %}</a><br />
+	            <a href="mailto:support@ecidadania.org">{% trans "E-mail" %}</a><br />
+	            <a href="/invite/">{% trans "Invite your friends" %}</a>
 	        </div>
 	                
 	        <div class="span3">
@@ -131,16 +132,17 @@
 	            {% endblock %}
 	        </div>
 	    </div>
-			<!-- Load JavaScript -->
+		
+		<!-- Load JavaScript -->
         <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
         <script src="{{ STATIC_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
-				<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
-				<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
-				<script type="text/javascript">
+		<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
+        <script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
+		<script type="text/javascript">
     	    $(document).ready(function(){
                 $(".alert").alert();
             });
-				</script>
+		</script>
     	<!-- End load JavaScript -->
 	</body>
 </html>
