--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -9,7 +9,8 @@
 
 <ul class="nav pull-right">
     <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Language" %}<b class="caret"></b></a>
+    
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="{{ STATIC_URL }}/assets/flags/all_flag.png" alt="{% trans 'Language' %}" title="{% trans 'Language' %}" /><b class="caret"></b></a>
         <ul class="dropdown-menu">
             {% for lang in LANGUAGES %}
                 <li>
@@ -43,6 +44,8 @@
 	            {% if user.is_staff %}
 	                <li><a href="{% url 'admin:index' %}">{% trans "Administration" %}</a></li>
 	                <li><a href="{% url 'create-space' %}">{% trans "Create new space" %}</a></li>
+	                <li><a href="{% url 'add-site-post' %}">{% trans "Add news" %}</a></li>
+    	            <li class="divider"></li>
 	            {% endif %}
 	            <li><a href="{% url 'profile_edit_personal' %}">{% trans "Edit profile" %}</a></li>
 	            <li class="divider"></li>
