--- a/views/gis/location_create.html
+++ b/views/gis/location_create.html
@@ -5,7 +5,8 @@
 <p>&nbsp;</p>
 {{try:}}
 {{=XML(_map)}}
-{{except:}}{{pass}}
+{{except:}}
+{{pass}}
 <script type="text/javascript">//<![CDATA[
 $(function() {
     // When the Level changes:
@@ -35,3 +36,4 @@ $(function() {
 });
 //]]></script>
 {{include "gis/feature_crud.js"}}
+{{include "gis/convert_gps.html"}}
