--- a/views/gis/location_update.html
+++ b/views/gis/location_update.html
@@ -10,7 +10,8 @@
 <p>&nbsp;</p>
 {{try:}}
 {{=XML(_map)}}
-{{except:}}{{pass}}
+{{except:}}
+{{pass}}
 <script type="text/javascript">//<![CDATA[
 $(function() {
     var level = $('#gis_location_level').val();
@@ -36,3 +37,4 @@ $(function() {
 });
 //]]></script>
 {{include "gis/feature_crud.js"}}
+{{include "gis/convert_gps.html"}}
