--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/location.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/location.html
@@ -13,13 +13,13 @@
 	            <fieldset>
 		            <div id="contenttitles">{% trans "Define your location" %}</div>
 		            <div class="span12">
-		                <h3 for="country_id">{% trans "Country" %}</h3>
+		                <h3 for="id_country">{% trans "Country" %}</h3>
 		                <p>{{ form.country }}</p>
-		                <h3 for="region_id">{% trans "Region" %}</h3>
+		                <h3 for="id_region">{% trans "Region" %}</h3>
 		                <p>{{ form.region }}</p>
-		                <h3 for="city_id">{% trans "City" %}</h3>
+		                <h3 for="id_city">{% trans "City" %}</h3>
 		                <p>{{ form.city }}</p>
-		                <h3 for="district_id">{% trans "District" %}</h3>
+		                <h3 for="id_district">{% trans "District" %}</h3>
 		                <p>{{ form.district }}</p>
 		                {% if GOOGLE_MAPS_API_KEY %}
 			                <div class="mapinfo">
