--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -7,144 +7,162 @@
 
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
-        
-        <script src="{{ STATIC_URL }}/js/jquery.formset.js" type="text/javascript"></script>
-        <script src="{{ STATIC_URL }}/js/debate_board.js" type="text/javascript"></script>
-        <script type="text/javascript">
-           $(function() {
-               $('#ajaxform thead tr').formset();       
-               $('#ajaxform tbody tr').formset();
-           })
-           
-       </script>
-        
-            <div id="contenttitles">
-                {% trans "Create a new debate" %}
-            </div>
+{% block centercol %}
+<div class="grid_16">
+    <script src="{{ STATIC_URL }}/js/jquery.formset.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}/js/debate_board.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(function() {
+                $('#ajaxform thead tr').formset();
+                $('#ajaxform tbody tr').formset();
+                })
+</script>
+<div id="contenttitles">
+    <h2>{% trans "Create a new debate" %}</h2>
+    <span class="btn btn-small btn-danger" id="del-column-btn" onclick="removeTableColumn()">{% trans "Remove column" %}</span>
+    <span class="btn btn-small btn-primary" id="new-column-btn" onclick="addTableColumn()">{% trans "Add column" %}</span>
 
-            <div id="debate-number" class="hidden">{{ debateid }}</div>
+</div>
+<span class="btn btn-small btn-danger" onclick="removeTableRow()">{% trans "Remove row" %}</span>
+<span class="btn btn-small btn-primary" onclick="addTableRow()">{% trans "Add row" %}</span>
 
-            <div id="debate">
+<div id="debate-number" class="hidden">{{ debateid }}</div>
 
-            <form id="ajaxform" enctype="" action="" method="post">{% csrf_token %}
-                
-                <span class="btn danger small" id="del-column-btn" onclick="removeTableColumn()">{% trans "Remove column" %}</span>
-                <span class="btn primary small" id="new-column-btn" onclick="addTableColumn()">{% trans "Add column" %}</span>
-                
-                <table id="debate{{ debateid }}" cellspacing="0">
-                    <thead>
-                        <tr id="debate{{ debateid }}-headers">
-                            {{ colform.management_form }}
-                            <th id="corner" class="corner-criteria"></th>
-                            {% for col in colform.forms %}
-                                <th id="debate-vcriteria{{ debate_id }}" class="criteria-vtitle">
-                                    {{ col.criteria }}
-                                </th>
-                            {% endfor %}
-                        </tr>
-                    </thead>
-                    <tbody id="debate-body">
-                        {{ rowform.management_form }}
-                        {% for row in rowform.forms %}
-                            <tr>
-                                <td id="debate-hcriteria" class="criteria-htitle">
-                                    <div id="debate-ttitle">
-                                        {{ row.criteria }}
-                                    </div>
-                                </td>
-                                <td id="sortable-debate{{ debateid }}" class="connectedSortable"></td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                
-<!--                <span class="btn danger small delete" onclick="deleteForm(this, 'form')">{% trans "Remove row" %}</span>-->
-<!--                <span class="btn primary small" onclick="addForm(this, 'form')">{% trans "Add row" %}</span>-->
+<div id="debate">
 
-                <hr />
-                <h1>{% trans "Other debate data" %}</h1><br/><br/>
-                
-                {% if form.non_field_errors %}
-                    {% for error in form.non_field_errors %}
-                        <span class="help-inline">{{ error|escape }}</span>
+    <form id="ajaxform" enctype="" action="" method="post">{% csrf_token %}
+        <table id="debate{{ debateid }}" cellspacing="0" cellpadding="0" border="0">
+            <thead>
+                <tr id="debate{{ debateid }}-headers">
+                    {{ colform.management_form }}
+                    <th id="corner" class="corner-criteria"></th>
+                    {% for col in colform.forms %}
+                    <th id="debate-vcriteria{{ debate_id }}" class="criteria-vtitle">
+                        {{ col.criteria }}
+                    </th>
                     {% endfor %}
-                {% endif %}
+                </tr>
+            </thead>
+            <tbody id="debate-body">
+                {{ rowform.management_form }}
+                {% for row in rowform.forms %}
+                <tr>
+                    <td id="debate-hcriteria" class="criteria-htitle">
+                        <div id="debate-ttitle">
+                            {{ row.criteria }}
+                        </div>
+                    </td>
+                    <td id="sortable-debate{{ debateid }}" class="connectedSortable"></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <!-- <span class="btn btn-small  btn-primary" onclick="createNote()">{% trans "Add new note" %}</span>
+        <span class="btn btn-small  btn-primary" onclick="addForm(this, 'form')">{% trans "Change color" %}</span>-->
+        <hr />
+        <h1>{% trans "Other debate data" %}</h1><br/><br/>
+        {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+        <span class="help-inline">{{ error|escape }}</span>
+        {% endfor %}
+        {% endif %}
 
-               <div class="clearfix {% if form.title.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.title.label }}</label> 
-                    <div class="input"> 
-                        {{ form.title }}
-                        <span class="help-inline">
-                            {% if form.title.errors %}
-                                {% for error in form.title.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.title.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-                
-                <div class="clearfix {% if form.scope.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.scope.label }}</label> 
-                    <div class="input"> 
-                        {{ form.scope }}
-                        <span class="help-inline">
-                            {% if form.scope.errors %}
-                                {% for error in form.scope.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.scope.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-                
-                <div class="clearfix {% if form.description.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.description.label }}</label> 
-                    <div class="input"> 
-                        {{ form.description }}
-                        <span class="help-inline">
-                            {% if form.description.errors %}
-                                {% for error in form.description.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.description.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-                
-                {{ form.columns.as_hidden }}
-                
-                <hr />
-
-                <input class="btn primary small" type="submit" value="{% trans 'Save' %}" />
-                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">{% trans "Cancel" %}</a>
-
-            </form>
-                
-            </div>
-
-        </div>
-
-    {% endblock %}
-
-    {% comment %}
-    {% block rightcol %}
-        <div class="grid_5">
-            <div id="widget">
-             <h2>{% trans "How to add new debates" %}</h2><br/>
-                <ul class="instructions">
-                    <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the modules you will use in your space. This can be edited afterwards." %}</li>
-                </ul>
+        <div class="clearfix {% if form.title.errors %}error{% endif%}">
+            <label for="prependedInput">{{ form.title.label }}</label>
+            <div class="input">
+                {{ form.title }}
+                <span class="help-inline">
+                    {% if form.title.errors %}
+                    {% for error in form.title.errors %}
+                    {{ error|escape }}
+                    {% endfor %}
+                    {% else %}
+                    {{ form.title.help_text }}
+                    {% endif %}
+                </span>
             </div>
         </div>
-    {% endblock %}
-    {% endcomment %}
+        <div class="clearfix {% if form.scope.errors %}error{% endif%}">
+            <label for="prependedInput">{{ form.scope.label }}</label>
+            <div class="input">
+                {{ form.scope }}
+                <span class="help-inline">
+                    {% if form.scope.errors %}
+                    {% for error in form.scope.errors %}
+                    {{ error|escape }}
+                    {% endfor %}
+                    {% else %}
+                    {{ form.scope.help_text }}
+                    {% endif %}
+                </span>
+            </div>
+        </div>
+        <div>
+            <div class="clearfix {% if form.start_date.errors %}error{% endif %}">
+                <label for="prependedInput">{{ form.start_date.label }}</label>
+                <div class="input">
+                <input type="text" name="start_date" id="datepicker-start" class="hasDatePicker">
+                    <span class="help-inline">
+                        {% if form.start_date.errors %}
+                        {% for error in form.start_date.errors %}
+                        {{ error|escape }}
+                        {% endfor %}
+                        {% else %}
+                        {{ form.start_date.help_text }}
+                        {% endif %}
+                    </span>
+                </div>
+                <div class="clearfix {% if form.end_date.errors %}error{% endif %}">
+                <label for="prependedInput">{{ form.end_date.label }}</label>
+                <input type="text" name="end_date" id="datepicker-end" class="hasDatePicker">
+                    <span class="help-inline">
+                        {% if form.end_date.errors %}
+                        {% for error in form.end_date.errors %}
+                        {{ error|escape }}
+                        {% endfor %}
+                        {% else %}
+                        {{ form.end_date.help_text }}
+                        {% endif %}
+                    </span>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix {% if form.description.errors %}error{% endif%}">
+                <label for="prependedInput">{{ form.description.label }}</label>
+                <div class="input">
+                    {{ form.description }}
+                    <span class="help-inline">
+                        {% if form.description.errors %}
+                        {% for error in form.description.errors %}
+                        {{ error|escape }}
+                        {% endfor %}
+                        {% else %}
+                        {{ form.description.help_text }}
+                        {% endif %}
+                    </span>
+                </div>
+            </div>
+            {{ form.columns.as_hidden }}
+            <hr />
+            <input class="btn btn-primary btn-small" type="submit" value="{% trans 'Save' %}" />
+            <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">{% trans "Cancel" %}</a>
+        </form>
+    </div>
+
+</div>
+
+{% endblock %}
+
+{% comment %}
+{% block rightcol %}
+<div class="grid_5">
+    <div id="widget">
+        <h2>{% trans "How to add new debates" %}</h2><br/>
+        <ul class="instructions">
+            <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the modules you will use in your space. This can be edited afterwards." %}</li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
+{% endcomment %}
 {% endblock %}
