Solved bug 189 - Password recovery gets wrong user

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
@@ -4,18 +4,17 @@
 {% block title %}{% trans "Password reset" %}{% endblock %}
 
 {% block content %}
-
     <div class="row">
         <div class="span12">
             <h4>{% trans "Reset password for" %} {{ user }}</h4>
-            <form action="" method="post" accept-charset="utf-8">
+            <form action="" method="post" accept-charset="utf-8">{% csrf_token %}
                 {% if form.non_field_errors %}
                     {% for error in form.non_field_errors %}
                         <span class="help-inline">{{ error|escape }}</span>
                     {% endfor %}
                 {% endif %}
 
-                <div class="clearfix {% if form.email.errors %}error{% endif%}">
+                <div class="clearfix {% if form.email.errors %}error{% endif %}">
                     <label for="prependedInput">{% trans 'E-mail address' %}</label>
                     <div class="input">
                         {{ form.email }}
@@ -30,7 +29,6 @@
                         </span>
                     </div>
                 </div>
-
                 <hr />
                 <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
                 <input class="btn btn-primary" type="submit" value="{% trans 'Reset my password' %}" />
