--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_confirm.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_confirm.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="span12">
             {% if validlink %}
-	            <form action="" method="post" accept-charset="utf-8">
+            <form action="" method="post" accept-charset="utf-8">{% csrf_token %}
                     {% if form.non_field_errors %}
                         {% for error in form.non_field_errors %}
                             <span class="help-inline">{{ error|escape }}</span>
