--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password reset successful' %}{% endblock %}
