Fixed Tamara merge for #166 and some CSS fixes also to the debates

--- a/src/e_cidadania/apps/custom_tags/templates/wysihtml5_instance.html
+++ b/src/e_cidadania/apps/custom_tags/templates/wysihtml5_instance.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 			var config = {{ config }};
-			custom_templates..enable('{{ editor_name }}', '{{ field_id }}', config);
+			custom_templates.enable('{{ editor_name }}', '{{ field_id }}', config);
 </script>
 <script>
 	$('#{{field_id}}').wysihtml5();
