Fixed minor bug

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
@@ -6,7 +6,8 @@
 {% block content %}
     <div class="row">
         <div class="span12">
-            <h4>{% trans "Reset password for" %} {{ user }}</h4>
+            <h4>{% trans "Reset password" %}</h4>
+            <p>{% trans "Please write your e-mail direction below. We will send you a link to create a new password for your user." %}</p>
             <form action="" method="post" accept-charset="utf-8">{% csrf_token %}
                 {% if form.non_field_errors %}
                     {% for error in form.non_field_errors %}
