--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -128,7 +128,7 @@
 	    <div class="row" style="width:980px;margin:auto;">
 	        <div class="span12">
                 {% block extrainfo %}
-	                (c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a>
+	                (c) 2010-{% now "Y" %} <a href="http://code.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a>
 	            {% endblock %}
 	        </div>
 	    </div>
