ArcGIS REST Layers support in Map, Tweak Catalog Item imports, jquery.validate deactivates by default on hidden fields

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -1300,7 +1300,10 @@ div#last_update {
     background-image: url(../../img/jquery-ui/ui-icons_222222_256x240.png);
     background-position: -32px -16px;
 }
-
+/* Grow Input */
+li input + a {
+    text-decoration: none;
+}
 
 .rfilter {
     float: left;
