--- a/views/gis/catalog.html
+++ b/views/gis/catalog.html
@@ -2,6 +2,7 @@
 <h3>{{=T("Manage Layers in Catalog")}}:</h3>
 <ul>
 <li><a href='{{=URL(f="layer_feature")}}'>Features</a> - Internal Resources</li>
+<li><a href='{{=URL(f="layer_arcrest")}}'>ArcGIS REST</a> - Feeds</li>
 <li><a href='{{=URL(f="layer_geojson")}}'>GeoJSON</a> - Feeds</li>
 <li><a href='{{=URL(f="layer_georss")}}'>GeoRSS</a> - Feeds</li>
 <li><a href='{{=URL(f="layer_gpx")}}'>GPX</a> - GPS eXchange format</li>
