Map: Theme Layer style moved to gis_layer_config for use by Widget. Start of Search on Feature Layers on main Map (incomplete)

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -63,6 +63,7 @@ ol, ul {
     list-style: disc inside none;
 }
 /* Except here */
+ul.x-tab-strip,
 ul.x-tree-node-ct,
 ul.x-tree-root-ct {
     list-style: none outside none;
