Individuals should not own records as entities (but as individuals) Allow access to unrestricted pages in simple auth. Delegation API, works both ways: 1:1 (entity=>entity) and 1:N (entity=>role).

--- a/views/layout.html
+++ b/views/layout.html
@@ -105,7 +105,8 @@
                 {{if response.confirmation:}}<div class='confirmation'>{{=response.confirmation}}</div>{{pass}}
                 {{if response.flash:}}<div class='confirmation'>{{=response.flash}}</div>{{pass}}
                 <div id='content' class='clearfix'>
-                    {{include}}
+                  {{#include "breadcrumbs.html"}} 
+                  {{include}}
                 </div>
             </div>
         </div>
