--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -259,7 +259,7 @@ table {
 }
 
 /* Now to layout elements... */
-/* Unused in default Sahana THeme
+/* Unused in default Sahana Theme
 #container {
     background: none repeat scroll 0 0 #FFFFFF;
     margin: 0 auto;
@@ -1558,7 +1558,7 @@ li input + a {
 }
 
 .contacts-wrapper p {
-   margin-bottom: 5px;
+   margin-bottom: 10px;
 }
 .contacts-wrapper div.margin {
    margin-bottom: 10px;
