--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -888,6 +888,11 @@ table.dataTable tr td{
     vertical-align: top;
 }
 
+table.dataTable .group {
+	background-color: #ddd;
+	border: 1px solid #aaa;
+}
+
 div.dataTables_filter {
     /* text-align: left; */
     width: auto;
@@ -1166,6 +1171,7 @@ div.tabs span.tab_here {
 form div.tabs span.tab_here{
     background:#ffffff;
 }
+
 div.tabs span.tab_here a {
     color: #006699;
     padding: 4px 6px 3px 5px;
