--- a/views/default/index.html
+++ b/views/default/index.html
@@ -4,7 +4,7 @@
 <h2 align='center'>{{=title}}</h2>
 {{except:}}{{pass}}
 {{=XML(item)}}
-<table width="50%" align="center">
+<table align="center">
 <tr><td>
 <div id='menu_box_center'>
 {{try:}}
@@ -34,33 +34,13 @@
 	</div>
 {{pass}}
 {{=manage_facility_box}}
-{{=org_box}}
+<div id='about'>
+    <p>
+    RGIMS aims to provide a reliable and accurate inventory control of the UNWFP and DSWD logistics management systems of tracking, monitoring and reporting of relief goods intake, warehousing and outflow of donations.<br/>
+    </br>For more details on the RGIMS system please contact DSWD-NROC Office. 
+</p>
+</div>
 </div>
 </td></tr>
 </table>
-<div id='menu_box_2'>
-<!-- More boxes can go here -->
 </div>
-</div>
-<div id='about'>
-    <!--
-    <p>
-    {{=T("Contact")}}: Name of Public Information person
-    <br/>{{=T("Email")}}: Public Information email address
-    <br/>{{=T("Telephone")}}: Public Information telephone number
-    </p>
-    -->
-    <p>
-    {{=T("For more details on the Sahana Eden system, see the")}} <a href="http://eden.sahanafoundation.org" target="_blank">{{=T("Sahana Eden Website")}}</a>
-    <br/>{{=T("For live help from the Sahana community on using this application, go to")}} <a href="http://eden.sahanafoundation.org/wiki/Chat" target="_blank">{{=T("Sahana Community Chat")}}</a>
-    </p>
-    <p>&nbsp;</p>
-</div>
-{{if deployment_settings.frontpage.rss:}}
-<div id="feed-control">
-    <span style="color:#676767;font-size:11px;margin:10px;padding:4px;">{{=T("Loading")}}...</span>
-</div>
-{{pass}}
-{{if org_box:}}
-{{include "dataTables.html"}}
-{{pass}}
