--- a/views/footer.html
+++ b/views/footer.html
@@ -1,12 +1,13 @@
-{{if deployment_settings.ui.get("social_buttons"):}}
+﻿{{if deployment_settings.ui.get("social_buttons"):}}
 <div id="socialmedia_share"></div>
 {{pass}}
+<p id="dswd">
+© 1998-2012, Department of Social Welfare and Development<br/>
+Constitution Hills, Batasan Pambansa Complex, Quezon City, Philippines<br/>
+Tel. (632)931-81-01 to 07
+</p>
 <p id="poweredby">
     <img src='/{{=request.application}}/static/img/S3menu_logo.png' width='30' height='28' style='vertical-align: middle;' alt='{{=T("Powered by Sahana Eden")}}' /><a target='_blank' href='http://eden.sahanafoundation.org' title='{{=T("Powered by Sahana Eden")}}'>{{=T("Powered by Sahana Eden")}}</a>
-    <!--
-    <p>&nbsp;</p>
-    <a target='_blank' href='http://www.zen.co.uk' title='Hosted by Zen Internet'><img src='/{{=request.application}}/static/img/logo_zen.gif' width='24' height='24' style='vertical-align: middle;' alt='Hosted by Zen Internet' />Hosted by Zen Internet</a>
-    -->
 </p>
 <div class="clearfix"></div>
 
