--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -254,6 +254,15 @@
                         <div class="span4">
                             <h4>{% trans "Administration" %}</h4>
                             <ul class="unstyled">
+                                {% if perms.proposalsets.add_proposalset %}
+                                    <li>
+                                        <a href="{% url 'add-proposalset' get_place.url %}">
+                                            <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add New Proposal'%}" title="{% trans 'Add new proposal' %}"/>{% trans "Add Proposal Set" %}
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                            <ul class="unstyled">
                                 {% if perms.proposals.add_proposal %}
                                     <li><a href="{% url 'add-proposal' get_place.url %}">
                                             <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add new post' %}" title="{% trans 'Add new post' %}"/>{% trans "Add proposal" %}
